🔧 auditoria: corrigir bugs, unificar autores e adicionar documentacao
Corrigidos:
- Validador: bug copiar-colar na validacao de datas (checkIn nao era verificado)
- Cliente: construtor 4-arg falhava silenciosamente em campos obrigatorios
- Menus: reservasConfirmadasExistentes era local, perdendo-se entre sessoes
- ReservaService: verificarSobreposicaoDatas misturava throw + return, codigo morto em confirmarReserva
- Menus: bounds check ausente em clientes.get()
- Pagamento/FormaCobranca: removido codigo morto (confirmarPagamento, estornarPagamento, getCalculadora)
- Reserva: erros de gramatica nas mensagens de erro
- Menus: saida de erro inconsistente (System.out vs SystemErr)

Documentacao:
- README.md: reescrito seguindo modelo da equipa
- ARCHITECTURE.md: documentacao tecnica de arquitetura, padroes e dominio
- CONTRIBUTING.md: guia de contribuicao para a equipa

Autores:
- @author unificado em 20 ficheiros + LICENSE para toda a equipa